Fix anchor tag to wrap around image tag

--- a/styles.css
+++ b/styles.css
@@ -13,12 +13,30 @@ img {
     line-height: 0;
 }
 
+li {
+    list-style-type: none;
+}
+
 .title {
     text-align: center;
     font-size: 40px;
 }
 
 .text {
+    color: rgba(0, 0, 0, 0.925);
     text-align: center;
     font-size: 20px;
+}
+
+.unordered-list {
+    list-style: none;
+    padding-left: 0;
+  }
+
+a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 250px;
+    margin: 10px auto;
 }
